<resources>
    <string name="app_name">architecture_basics</string>

    <!-- LoginFragment-->
    <string name="login">LOGIN</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ibu">IBU:</string>
    <string name="brewed">Brewed:</string>
    <string name="abv">ABV:</string>
    <string name="about">About:</string>
    <string name="favourite">Favorito</string>
    <string name="favourites">Favoritos</string>
    <string name="products">Productos</string>
    <string name="settings">Ajustes</string>
    <string name="select_an_item_to_view">Seleccione un elemento para visualizar.</string>
    <string name="percentage_number">%1$d</string>

</resources>