<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="6dp"
        app:cardElevation="4dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="6dp"
            >

            <ImageView
                android:id="@+id/iv_imagen"
                android:layout_height="120dp"
                android:layout_width="100dp"
                android:adjustViewBounds="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:src="@mipmap/ic_launcher"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_imagen"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Electric India"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textStyle="bold"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingHorizontal="8dp"
                android:paddingTop="8dp"
                />

            <TextView
                android:id="@+id/txt_tag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txt_name"
                app:layout_constraintStart_toEndOf="@id/iv_imagen"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Vibrant Hoppy Saison."
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingHorizontal="8dp"
                />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_brewed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txt_tag"
                app:layout_constraintStart_toEndOf="@id/iv_imagen"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brewed"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingHorizontal="8dp"
                    android:textAppearance="?attr/textAppearanceListItem"
                    />
                <TextView
                    android:id="@+id/txt_firs_brewed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="05/2013"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingHorizontal="8dp"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_ibu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/linear_brewed"
                app:layout_constraintStart_toEndOf="@id/iv_imagen"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ibu"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingHorizontal="8dp"
                    android:textAppearance="?attr/textAppearanceListItem"

                    />
                <TextView
                    android:id="@+id/txt_ibu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="38"
                    android:ellipsize="end"
                    android:maxLines="1"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_abv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/linear_ibu"
                app:layout_constraintStart_toEndOf="@id/iv_imagen"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abv"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingHorizontal="8dp"
                    android:textAppearance="?attr/textAppearanceListItem"

                    />
                <TextView
                    android:id="@+id/txt_abv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="3.8%"
                    android:ellipsize="end"
                    android:maxLines="1"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>