<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.DetailsBeerFragment">

    <ImageView
        android:id="@+id/status_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_an_item_to_view"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/data_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        tools:visibility="visible"
        >



        <ImageView
            android:id="@+id/iv_articulo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:layout_constraintHeight_percent="0.45"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/beer_image" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_details"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_articulo">

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_iv_card"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="6dp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider_iv_card"
                tools:text="Electric India" />

            <TextView
                android:id="@+id/txt_tag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_name"
                tools:text="Vibrant Hoppy Saison." />


            <CheckBox
                android:id="@+id/chkFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/sl_favourite_24dp"
                app:buttonTint="@android:color/holo_red_dark"
                app:layout_constraintTop_toTopOf="@id/divider_iv_card"
                app:layout_constraintBottom_toTopOf="@id/divider_name_description"
                app:layout_constraintEnd_toEndOf="parent"
                />


            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_name_description"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="6dp"
                app:layout_constraintTop_toBottomOf="@id/txt_tag" />

            <LinearLayout
                android:id="@+id/linear_atributes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider_name_description"

                >

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linear_brewed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingHorizontal="8dp"
                        android:text="@string/brewed"
                        android:textAppearance="?attr/textAppearanceListItem" />

                    <TextView
                        android:id="@+id/txt_firs_brewed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingHorizontal="8dp"
                        tools:text="05/2013" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linear_ibu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingHorizontal="8dp"
                        android:text="@string/ibu"
                        android:textAppearance="?attr/textAppearanceListItem"

                        />

                    <TextView
                        android:id="@+id/txt_ibu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        tools:text="38" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linear_abv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingHorizontal="8dp"
                        android:text="@string/abv"
                        android:textAppearance="?attr/textAppearanceListItem"

                        />

                    <TextView
                        android:id="@+id/txt_abv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        tools:text="3.8%" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_atributes_description"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="6dp"
                app:layout_constraintTop_toBottomOf="@id/linear_atributes" />

            <TextView
                android:id="@+id/txt_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/about"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider_atributes_description" />

            <ScrollView
                android:id="@+id/scroll_page"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:fillViewport="true"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_about">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/txt_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="10"
                        android:textAppearance="?attr/textAppearanceBody1"
                        tools:text="A titillating, neurotic, peroxide punk of a Pale Ale. Combining attitude, style, substance, and a little bit of low self esteem for good measure; what would your mother say? The seductive lure of the sassy passion fruit hop proves too much to resist. All that is even before we get onto the fact that there are no additives, preservatives, pasteurization or strings attached. All wrapped up with the customary BrewDog bite and imaginative twist.A titillating, neurotic, peroxide punk of a Pale Ale. Combining attitude, style, substance, and a little bit of low self esteem for good measure; what would your mother say? The seductive lure of the sassy passion fruit hop proves too much to resist. All that is even before we get onto the fact that there are no additives, preservatives, pasteurization or strings attached. All wrapped up with the customary BrewDog bite and imaginative twist." />

                </LinearLayout>


            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>